Event creation including invalidation. No locks for parallel execution yet

--- a/booksim2/src/Makefile
+++ b/booksim2/src/Makefile
@@ -31,7 +31,7 @@ DEFINE =
 INCPATH = -I. -Iarbiters -Iallocators -Irouters -Inetworks -Ipower
 CPPFLAGS_COMMON = -Wall $(INCPATH) $(DEFINE) -D_GLIBCXX_USE_CXX11_ABI=0 #comply with ABI needed for ZSIM 
 CPPFLAGS = $(CPPFLAGS_COMMON) -O3
-CPPFLAGS_D = $(CPPFLAGS_COMMON) -O0 -g -DTRACK_CREDITS=1 -DTRACK_FLOWS=1 -DPRINT_ALL=1
+CPPFLAGS_D = $(CPPFLAGS_COMMON) -O0 -g -DTRACK_CREDITS=1 -DTRACK_FLOWS=1 
 CPPFLAGS_P = $(CPPFLAGS_COMMON) -O0 -g -fprofile-generate --coverage -pg
 LDFLAGS =
 LDFLAGS_D =
