Implemented booksimNetwork locks for accesses and invalidations to enable parallel execution

--- a/zsim/tests/bzsimsimple.cfg
+++ b/zsim/tests/bzsimsimple.cfg
@@ -75,5 +75,6 @@ sim = {
 };
 
 process0 = {
-    command = "ls -alh --color tests/";
+    #command = "ls -alh --color tests/";
+    command = "../benchmarks/NPB3.4.2/NPB3.4-OMP/bin/bt.S.x ";
 };
