Fixed calculations for injection/ejection and IR. Added EXTRA_STATS for more detailed injection counters

--- a/booksim2/src/Makefile
+++ b/booksim2/src/Makefile
@@ -43,6 +43,12 @@ CPPFLAGS_P += -DEXTRA_BYPASS_STATS=1
 CPPFLAGS_D += -DEXTRA_BYPASS_STATS=1
 endif
 
+ifeq ($(EXTRA_STATS), 1)
+CPPFLAGS += -DEXTRA_STATS=1
+CPPFLAGS_P += -DEXTRA_STATS=1
+CPPFLAGS_D += -DEXTRA_STATS=1
+endif
+
 ifeq ($(BYPASS_STATS), 1)
 CPPFLAGS += -DBYPASS_STATS=1
 CPPFLAGS_P += -DBYPASS_STATS=1
