network stats in separate file

--- a/booksim2/config/anynet.cfg
+++ b/booksim2/config/anynet.cfg
@@ -37,7 +37,5 @@ step_cnt_update = 1000;
 // Simulation
 sim_type = throughput;
 
-//endpoint_routers = {24};
-//
-stats_out=stats_out.txt;
-pair_stats=1;
+// Stats
+overall_stats_out = -;
